--- a/resultado.html
+++ b/resultado.html
@@ -12,20 +12,24 @@
 <body>
 
     <div class="seccion">
+        <h5 class="text-center">Inteligencia</h5>
         <div class="progress">
-            <div class="progress-bar bg-success" role="progressbar" style="width: 0%" aria-valuenow="25"
+            <div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="25"
                 aria-valuemin="0" aria-valuemax="100" id="eje1"></div>
         </div>
+        <h5 class="text-center">Generosidad</h5>
         <div class="progress">
-            <div class="progress-bar bg-info" role="progressbar" style="width: 0%" aria-valuenow="50" aria-valuemin="0"
+            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                 aria-valuemax="100" id="eje2"></div>
         </div>
+        <h5 class="text-center">Atractivo</h5>
         <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 0%" aria-valuenow="75"
+            <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="75"
                 aria-valuemin="0" aria-valuemax="100" id="eje3"></div>
         </div>
+        <h5 class="text-center">Humildad</h5>
         <div class="progress">
-            <div class="progress-bar bg-danger" role="progressbar" style="width: 0%" aria-valuenow="100"
+            <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="100"
                 aria-valuemin="0" aria-valuemax="100" id="eje4"></div>
         </div>
     </div>
